@@ -20,12 +20,10 @@
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <CharacterSet>Unicode</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -45,6 +43,7 @@
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">(Platform)\$(Configuration)\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">(Platform)\$(Configuration)\</IntDir>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</LinkIncremental>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">SDL2_gfx</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -72,7 +71,11 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PostBuildEvent>
-      <Command></Command>
+      <Command>
+if not exist "$(SolutionDir)Test\$(Platform)\$(Configuration)\" mkdir "$(SolutionDir)Test\$(Platform)\$(Configuration)\"
+copy /Y "$(TargetPath)" "$(SolutionDir)Test\$(Platform)\$(Configuration)\"
+copy /Y "$(ProjectDir)..\SDL\VisualC\SDL\$(Platform)\$(Configuration)\SDL2.dll" "$(SolutionDir)Test\$(Platform)\$(Configuration)"
+</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -96,7 +99,11 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PostBuildEvent>
-      <Command></Command>
+      <Command>
+if not exist "$(SolutionDir)Test\$(Platform)\$(Configuration)\" mkdir "$(SolutionDir)Test\$(Platform)\$(Configuration)\"
+copy /Y "$(TargetPath)" "$(SolutionDir)Test\$(Platform)\$(Configuration)\"
+copy /Y "$(ProjectDir)..\SDL\VisualC\SDL\$(Platform)\$(Configuration)\SDL2.dll" "$(SolutionDir)Test\$(Platform)\$(Configuration)"
+</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
